tests/rosetta/transpiler/Java/angle-difference-between-two-bearings-2.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenangle-difference-between-two-bearings-21597494656/001/Main.java:5: error: incompatible types: possible lossy conversion from double to int
        int diff = b2 - b1;
                      ^
1 error
